# modern-travel-assistant

./: .env.example  .gitignore  PROMPT_NOTES.md  README.md  app.py  plan.md  pyproject.toml  spec.md  test_eval.py
agent/: __init__.py  agent.py  memory.py  prompts.py
tools/: __init__.py  attractions.py  country.py  destination_snapshot.py  weather.py
utils/: async_tools.py  error_handler.py
